# kursovaya_4

./: README.md  main.py  pyproject.toml
data/: HH_class.py
src/: HH_class.py  Methods_by_json.py  Vacancy_class.py  for_json_class.py  main.py  other.py
tests/: tests_vacancy.py
